src/sass/layout/_articles.scss
article{
    padding-top: ($breathing-room / 2 );
    margin: auto;
    
    width: $article-reading-width;
    
    background-color: $standard-background;

    > *{
        padding-left: $breathing-room;
        padding-right: $breathing-room;
    }

    header{
        padding: $breathing-room;

        h1, h2, h3, h4, h5{
            @extend .tl;

            margin-bottom: 0.25em;
            
            a{
                text-decoration: none;
                color: $reading;
            }
        }
        
        hr{
            @extend .fl;
            width: 100%;
        }

        li{
            margin-top: ($breathing-room / 4 );
            
            a{
                text-decoration: underline;
            }
        }

        a{
            color: $link-color-active;
        }

        time{
            margin-top: $breathing-room;
        }
    }

    div.body{
        padding-top: $breathing-room;
        padding-bottom: $breathing-room;
        
        color: $reading;
        
        font-size: $reading-font-size;
        
        p{
            line-height: $reading-line-height;
            
            + p{
                margin-top: (2 * $breathing-room);
            }
        }
        
        img{
            margin: ($breathing-room / 3);
        }
    }
    
    div.comments{
        button{
            @extend .center;
            display: block;
        }
    }
}

